test/examples/errors/ConflictingPieces.lego
-- ERROR TEST: Conflicting production definitions in pieces
-- Expected: Conflict detection warning

lang ConflictingPieces :=

piece A
  expr ::= "(" "add" expr expr ")"
  num ::= "0"

piece B
  expr ::= "(" "mul" expr expr ")"   -- same name 'expr', different definition!
  num ::= "1"

-- Pushout A + B has conflict on 'expr'
test "conflict": 0 ~~> 0
